--- a/veld.yaml
+++ b/veld.yaml
@@ -27,8 +27,12 @@ services:
   veld_wordembeddings_postgres_db:
     build: .
     #command: python /veld/code/REPLACE.py
+    #user: root
     volumes:
       - ./src/:/veld/code/
-    #environment:
-    #  REPLACE: 
+      #- ./data/:/var/lib/postgresql/data/
+    environment:
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: mydatabase
+      #POSTGRES_USER: root
 
